# Server-PythonPackage

./: .gitignore  README.md  install.bat  pyproject.toml  requirements.txt
.github/workflows/: AutoPreRelease.yml  AutoRelease.yml  NightlyBuild.yml
philh_myftp_biz/: __init__.py  array.py  classOBJ.py  classtools.py  compiler.py  db.py  file.py  functools.py  gps.py  gui.py  json.py  modules.py  num.py  pc.py  process.py  programs.py  terminal.py  text.py  time.py  web.py
philh_myftp_biz/api/: VirusTotal.py  minecraft.py  omdb.py  torrent.py
philh_myftp_biz/file/: __init__.py  configobj.pyd  configobj.pyi  toml.pyd  toml.pyi  tomli_w.pyd  tomli_w.pyi  xmltodict.pyd  xmltodict.pyi  yaml.pyd  yaml.pyi
philh_myftp_biz/functools/: Absorber.py  Partial.py  SharedBuffer.py  TransitoryCache.py  __init__.py  attr.py  paths.py  supports.py
philh_myftp_biz/gui/: Widget.py  __init__.py  page.py  widget.py  window.py
philh_myftp_biz/json/: Collection.py  Dict.py  List.py  __init__.py  ltable.py
philh_myftp_biz/modules/: Module.py  Repo.py  Service.py  __init__.py
philh_myftp_biz/pc/: Path.py  __init__.py
philh_myftp_biz/process/: SubProcess.py  SysTask.py  Thread.py  Venv.py  __init__.py
philh_myftp_biz/programs/: __init__.py  browser_cookie3.pyd  browser_cookie3.pyi
philh_myftp_biz/remotepc/: ftp.py  ssh.py
philh_myftp_biz/terminal/: Args.py  KIC.py  Log.py  ProgressBar.py  __init__.py  inputimeout.pyd  inputimeout.pyi  tqdm.pyd  tqdm.pyi
philh_myftp_biz/text/: __init__.py  contains.py  hex.py  io.py  regex.py
philh_myftp_biz/time/: __init__.py  (+2 more)
(+22 files in other folders)
