[build-system]
requires = [ "hatchling", "hatch-requirements-txt",]
build-backend = "hatchling.build"

[project]
name = "philh_myftp_biz"
version = "v2026.06.25"
dynamic = [ "dependencies",]

[tool.hatch.metadata.hooks.requirements_txt]
files = [ "requirements.txt",]

[tool.hatch.build.targets.wheel]
packages = ["philh_myftp_biz"]

[tool.hatch.build]
artifacts = [
    "**/*.pyd",
    "**/*.pyi",
]