[build-system]
requires = [ "hatchling", "hatch-requirements-txt",]
build-backend = "hatchling.build"

[project]
name = "philh_myftp_biz"
version = "v2026.06.27"
dynamic = [ "dependencies",]

[tool.hatch.build]
artifacts = [ "**/*.pyd", "**/*.pyi",]

[tool.hatch.build.targets.wheel]
packages = [ "philh_myftp_biz",]

[tool.hatch.metadata.hooks.requirements_txt]
files = [ "requirements.txt",]
