[build-system]
requires = [ "hatchling", "hatch-requirements-txt",]
build-backend = "hatchling.build"

[project]
name = "philh_myftp_biz"
version = "v2026.07.23"
dynamic = [ "dependencies",]
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = [ "F401", "E731", "E402", "E701", "E722", "F403",]

[tool.hatch.build]
artifacts = [ "**/*.pyd", "**/*.pyi",]

[tool.hatch.build.targets.wheel]
packages = [ "philh_myftp_biz",]

[tool.hatch.metadata.hooks.requirements_txt]
files = [ "requirements.txt",]
